<resources>
    <string name="app_name">食光</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_choice">选择</string>
    <string name="title_activity_register">注册食光用户</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">需要填写完整信息</string>
    <string name="register_newtime_user">注册食光用户</string>
    <string name="register_phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="gain_verification">获取验证码</string>
    <string name="set_password">输入密码</string>
    <string name="copy_password">重新输入密码</string>
    <string name="register">注册</string>
    <string name="user_contract">用户协议</string>
    <string name="name_not_empty">用户名不能为空</string>
    <string name="password_long_6">密码至少6位</string>
    <string name="password_not_equal">密码不一致</string>
    <string name="birth_not_empty">生日不能为空</string>
    <string name="phone_not_empty">手机号不能为空</string>

    <string name="register_user">注册用户</string>
    <string name="forget_password">忘记密码?</string>
    <string name="account_or_password_not_null">帐号和密码不能为空</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="send_code_complete">发送验证码完成</string>
    <string name="please_input_phone">请输入11位数字手机号码</string>
    <string name="code_length">请输入正确的验证码</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_content">食光\n唯有美食与爱不可辜负</string>
    <string name="splash_content">食光\n唯有美食与爱\n不可辜负</string>
    <string name="home">首页</string>
    <string name="dish">菜品</string>
    <string name="orders">订单</string>
    <string name="me">我的</string>
    <string name="location">腾讯大厦</string>
    <string name="distance">距离</string>
    <string name="score">评分</string>
    <string name="price">价格</string>
    <string name="sales_volume">销量</string>
    <string name="about">关于食光</string>
    <string name="go_auth">厨房认证</string>
    <string name="auth_state">认证状态</string>
    <string name="one_hundred">100</string>
    <string name="creditworthiness">信誉度</string>
    <string name="shop_name">张大妈的家</string>
    <string name="shop_address">帝景花园</string>
    <string name="guest">我是食客  </string>
    <string name="host">  我是掌柜</string>
    <string name="sales_volume_month">月销量</string>
    <string name="average">人均</string>
    <string name="kind">亲切度</string>
    <string name="zeal">热情度</string>
    <string name="quit">退出登录</string>
    <string name="title_activity_detaile">DetaileActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">"Material is the metaphor.\n\n"</string>

    <string name="action_settings">Settings</string>
    <string name="network_error">网络异常</string>
    <string name="minute_ago">分钟前</string>
    <string name="hour_ago">小时前</string>
    <string name="day_ago">天前</string>
    <string name="week_ago">周前</string>
    <string name="month_ago">个月前</string>
    <string name="year_ago">年前</string>
    <string name="hunderds_meters">百米</string>
    <string name="thousand_meters">KM</string>


    //食堂
    <string name="kitchen_detail_certification">实名认证</string>
    <string name="kitchen_detail_guest_count">就餐人数:</string>
    <string name="kitchen_dishes_month_sales">月销</string>
    <string name="kitchen_place_order">下订单</string>

    //订单order 2_3
    <string name="order_name">订单名称：</string>
    <string name="order_location">就餐地点：</string>
    <string name="order_predict_bill">预计金额：</string>
    <string name="wait_confirm">等待确认</string>
    <string name="breakfast_dish_time">早餐</string>
    <string name="lunch_dish_time">午餐</string>
    <string name="supper_dish_time">晚餐</string>
    <string name="snack_dish_time">夜宵</string>
    <string name="order_attention_1">系统将提醒房东接单，房东可视当前接单状况等因素选择接受或者取消订单。</string>
    <string name="order_attention_2">为了不影响你的就餐体验，房东端放弃或者15分钟内未接单系统将自动取消订单。</string>
    <string name="order_back_main_activity">回到主界面</string>

    //订单pay2_2
    <string name="pay_array_time_text">到达时间：</string>
    <string name="pay_array_data">%1$s月 %1$s日</string>
    <string name="pay_note">订单备注：</string>
    <string name="pay_note_default">自我介绍一下更受家庭欢迎哦！</string>
    <string name="pay_dishes">菜品:</string>
    <string name="pay_bill">总计</string>
    <string name="pay_confirm_place_order">确认下单</string>
    <string name="pay_set_time_title">请选择就餐时间日期</string>
    <string name="title_activity_kitchen_scrolling">KitchenScrollingActivity</string>
    <string name="title_activity_test_scrolling">TestScrollingActivity</string>
    //认证D1
    <string name="auth_name">姓名：</string>
    <string name="auth_gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="auth_identification">身份证号：</string>
    <string name="auth_kitchen_photo">厨师生活照</string>
    <string name="auth_kitchen_environment_photo">厨房环境照</string>
    <string name="auth_specialty_photo">拿手菜品照</string>
    <string name="auth_address">家庭住址：</string>
    <string name="submit">提交</string>

    //接口
    <string name="baseUrl_z">http://119.29.233.72:3000/</string>
    <string name="imgBaseUrl_z">http://119.29.233.72:3001/</string>

    <string name="getKitchen_z">userInfo</string>
    <string name="commitOrder_z">commitOrderList</string>
    <string name="imageUpload_z">uploadpicture</string>
    <string name="auth_z">confirmUser</string>
    <string name="commitDish_z">publishFood</string>


    <string name="person_z">personInfo</string>
    <string name="seller_z">sellerInfo</string>

    //添加/编辑食物

    <string name="dish_name_z">菜品名</string>
    <string name="dish_description_z">菜品描述</string>
    <string name="dish_price_z">价格</string>
    <string name="dish_photo_z">菜品图片</string>
    <string name="dish_price_digits_z">1234567890.</string>


    //错误提示
    <string name="get_kitchen_error">获取厨房数据失败</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
</resources>
