<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/distance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size2"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/score_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/score"
        android:textSize="@dimen/text_size2"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/price_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/price"
        android:textSize="@dimen/text_size2"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/sales_volume_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sales_volume"
        android:textSize="@dimen/text_size2"
        android:layout_weight="1"/>



</LinearLayout>