<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tencent.newtime.module.shop_detail.DishActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/dish_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/dish_name_z"
            />
        <EditText
            android:id="@+id/dish_description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lines="4"
            android:hint="@string/dish_description_z"
            />
        <EditText
            android:id="@+id/dish_price_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dish_price_z"
            android:digits="@string/dish_price_digits_z"
            android:layout_marginTop="16dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dish_photo_imageView"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dish_photo_height"
                android:scaleType="fitXY"
                android:src="@mipmap/plus_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size2"
                android:layout_marginTop="5dp"
                android:text="@string/dish_photo_z"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/dish_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"/>
</RelativeLayout>
