<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.tencent.newtime.module.register.AuthenticationActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size2"
                android:layout_marginRight="8dp"
                android:text="@string/auth_name"/>
            <EditText
                android:id="@+id/auth_name_editText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size2"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size2"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:text="@string/auth_gender"/>
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/auth_male_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/auth_female_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size2"
                android:layout_marginRight="8dp"
                android:text="@string/auth_identification"/>
            <EditText
                android:id="@+id/auth_identification_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size2"
                android:layout_marginRight="8dp"
                android:text="@string/auth_address"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/authentication_kitchen_imageView"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_photo_height"
                android:src="@mipmap/plus_photo"/>
            <!--android:scaleType="fitXY"
            android:background="@color/chat_bg_grey"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size2"
                android:text="@string/auth_kitchen_photo"/>
            <ImageView
                android:id="@+id/authentication_kitchen_environment_imageView"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_photo_height"
                android:src="@mipmap/plus_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/auth_kitchen_environment_photo"/>
            <ImageView
                android:id="@+id/authentication_specialty_imageView"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_photo_height"
                android:textSize="@dimen/text_size2"
                android:src="@mipmap/plus_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size2"
                android:text="@string/auth_specialty_photo"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/auth_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
