<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/whole_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/main_title"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <View
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <com.tencent.newtime.widget.TabItem
            app:image="@mipmap/main_tab_item_home"
            app:text="@string/home"
            android:id="@+id/main_item_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <com.tencent.newtime.widget.TabItem
            app:image="@mipmap/main_tab_item_orders"
            app:text="@string/orders"
            android:id="@+id/main_item_orders"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <com.tencent.newtime.widget.TabItem
            app:image="@mipmap/main_tab_item_me"
            app:text="@string/me"
            android:id="@+id/main_item_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>