<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".module.main_host.HostMainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/user_photo_me_host"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/horizontal_margin"
            />

        <TextView
            android:id="@+id/user_name_me_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size1"/>


        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey_gap" />




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/main_tab_item_orders" />

            <TextView
                android:id="@+id/auth_state_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/auth_state"
                android:textSize="16sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey_gap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/main_tab_item_orders" />

            <TextView
                android:id="@+id/about_new_time_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/about"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey_gap" />

        <Button
            android:id="@+id/logout_button_host"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/quit"/>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>